parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> initial
Rule 1     statement1 -> for_loop1
Rule 2     statement1 -> ifstatement4
Rule 3     statement1 -> other_statement1
Rule 4     statement1 -> empty
Rule 5     for_loop1 -> FOR LPAREN assignment1 SEMICOLON condition1 SEMICOLON update1 RPAREN compound_statement1
Rule 6     assignment1 -> INT ID OPERATOR expression1
Rule 7     assignment1 -> ID OPERATOR expression1
Rule 8     condition1 -> expression1
Rule 9     update1 -> ID OPERATOR OPERATOR
Rule 10    update1 -> ID OPERATOR expression1
Rule 11    expression1 -> expression1 OPERATOR expression1
Rule 12    expression1 -> expression1 OPERATOR OPERATOR expression1
Rule 13    expression1 -> LPAREN expression1 RPAREN
Rule 14    expression1 -> ID
Rule 15    expression1 -> NUMBER
Rule 16    compound_statement1 -> LBRACE statements1 RBRACE
Rule 17    statements1 -> statement1
Rule 18    statements1 -> statements1 statement1
Rule 19    other_statement1 -> ID OPERATOR expression1 SEMICOLON
Rule 20    function2 -> type2 ID LPAREN params2 RPAREN LBRACE statements2 RBRACE function2
Rule 21    function2 -> type2 ID LPAREN RPAREN LBRACE statements2 RBRACE function2
Rule 22    function2 -> empty
Rule 23    params2 -> param2
Rule 24    params2 -> params2 COMMA param2
Rule 25    param2 -> type2 ID
Rule 26    type2 -> INT
Rule 27    type2 -> FLOAT
Rule 28    statements2 -> statement2
Rule 29    statements2 -> statements2 statement2
Rule 30    statement2 -> declaration2
Rule 31    statement2 -> expression2 SEMICOLON
Rule 32    statement2 -> RETURN expression2 SEMICOLON
Rule 33    declaration2 -> type2 ID SEMICOLON
Rule 34    declaration2 -> type2 ID COMMA ID SEMICOLON
Rule 35    expression2 -> term2
Rule 36    expression2 -> expression2 OPERATOR term2
Rule 37    term2 -> factor2
Rule 38    term2 -> term2 OPERATOR factor2
Rule 39    factor2 -> NUMBER
Rule 40    factor2 -> ID
Rule 41    factor2 -> LPAREN expression2 RPAREN
Rule 42    ifstatement4 -> IF LPAREN expr4 RPAREN LBRACE statements4 RBRACE ifelse4
Rule 43    ifstatement4 -> IF expr4 LBRACE statements4 RBRACE
Rule 44    ifelse4 -> ELSEIF LPAREN expr4 RPAREN LBRACE statements4 RBRACE ifelse4
Rule 45    ifelse4 -> ELSE LBRACE statements4 RBRACE
Rule 46    ifelse4 -> empty
Rule 47    statements4 -> statements4 statements4 SEMICOLON
Rule 48    statements4 -> expr4
Rule 49    statements4 -> empty
Rule 50    expr4 -> expr4 OPERATOR OPERATOR expr4
Rule 51    expr4 -> expr4 OPERATOR expr4
Rule 52    expr4 -> ID
Rule 53    expr4 -> NUMBER
Rule 54    switch_statement5 -> SWITCH use_ornot5 LBRACE case_list5 DEFAULT COLON statement_list5 RBRACE
Rule 55    use_ornot5 -> LPAREN ID RPAREN
Rule 56    use_ornot5 -> ID
Rule 57    case_list5 -> case_entry5 case_list5
Rule 58    case_list5 -> empty
Rule 59    case_entry5 -> CASE NUMBER COLON statement_list5
Rule 60    statement_list5 -> statement5 SEMICOLON statement_list5
Rule 61    statement_list5 -> empty
Rule 62    statement5 -> ID
Rule 63    statement5 -> BREAK
Rule 64    empty -> <empty>
Rule 65    initial -> statement1
Rule 66    initial -> function2
Rule 67    initial -> ifstatement4
Rule 68    initial -> switch_statement5

Terminals, with rules where they appear

BREAK                : 63
CASE                 : 59
COLON                : 54 59
COMMA                : 24 34
DEFAULT              : 54
ELSE                 : 45
ELSEIF               : 44
FLOAT                : 27
FOR                  : 5
ID                   : 6 7 9 10 14 19 20 21 25 33 34 34 40 52 55 56 62
IF                   : 42 43
INT                  : 6 26
LBRACE               : 16 20 21 42 43 44 45 54
LPAREN               : 5 13 20 21 41 42 44 55
NUMBER               : 15 39 53 59
OPERATOR             : 6 7 9 9 10 11 12 12 19 36 38 50 50 51
RBRACE               : 16 20 21 42 43 44 45 54
RETURN               : 32
RPAREN               : 5 13 20 21 41 42 44 55
SEMICOLON            : 5 5 19 31 32 33 34 47 60
SWITCH               : 54
error                : 

Nonterminals, with rules where they appear

assignment1          : 5
case_entry5          : 57
case_list5           : 54 57
compound_statement1  : 5
condition1           : 5
declaration2         : 30
empty                : 4 22 46 49 58 61
expr4                : 42 43 44 48 50 50 51 51
expression1          : 6 7 8 10 11 11 12 12 13 19
expression2          : 31 32 36 41
factor2              : 37 38
for_loop1            : 1
function2            : 20 21 66
ifelse4              : 42 44
ifstatement4         : 2 67
initial              : 0
other_statement1     : 3
param2               : 23 24
params2              : 20 24
statement1           : 17 18 65
statement2           : 28 29
statement5           : 60
statement_list5      : 54 59 60
statements1          : 16 18
statements2          : 20 21 29
statements4          : 42 43 44 45 47 47
switch_statement5    : 68
term2                : 35 36 38
type2                : 20 21 25 33 34
update1              : 5
use_ornot5           : 54

Parsing method: LALR

state 0

    (0) S' -> . initial
    (65) initial -> . statement1
    (66) initial -> . function2
    (67) initial -> . ifstatement4
    (68) initial -> . switch_statement5
    (1) statement1 -> . for_loop1
    (2) statement1 -> . ifstatement4
    (3) statement1 -> . other_statement1
    (4) statement1 -> . empty
    (20) function2 -> . type2 ID LPAREN params2 RPAREN LBRACE statements2 RBRACE function2
    (21) function2 -> . type2 ID LPAREN RPAREN LBRACE statements2 RBRACE function2
    (22) function2 -> . empty
    (42) ifstatement4 -> . IF LPAREN expr4 RPAREN LBRACE statements4 RBRACE ifelse4
    (43) ifstatement4 -> . IF expr4 LBRACE statements4 RBRACE
    (54) switch_statement5 -> . SWITCH use_ornot5 LBRACE case_list5 DEFAULT COLON statement_list5 RBRACE
    (5) for_loop1 -> . FOR LPAREN assignment1 SEMICOLON condition1 SEMICOLON update1 RPAREN compound_statement1
    (19) other_statement1 -> . ID OPERATOR expression1 SEMICOLON
    (64) empty -> .
    (26) type2 -> . INT
    (27) type2 -> . FLOAT

    IF              shift and go to state 11
    SWITCH          shift and go to state 12
    FOR             shift and go to state 13
    ID              shift and go to state 10
    $end            reduce using rule 64 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15

    initial                        shift and go to state 1
    statement1                     shift and go to state 2
    function2                      shift and go to state 3
    ifstatement4                   shift and go to state 4
    switch_statement5              shift and go to state 5
    for_loop1                      shift and go to state 6
    other_statement1               shift and go to state 7
    empty                          shift and go to state 8
    type2                          shift and go to state 9

state 1

    (0) S' -> initial .



state 2

    (65) initial -> statement1 .

    $end            reduce using rule 65 (initial -> statement1 .)


state 3

    (66) initial -> function2 .

    $end            reduce using rule 66 (initial -> function2 .)


state 4

    (67) initial -> ifstatement4 .
    (2) statement1 -> ifstatement4 .

  ! reduce/reduce conflict for $end resolved using rule 2 (statement1 -> ifstatement4 .)
    $end            reduce using rule 2 (statement1 -> ifstatement4 .)

  ! $end            [ reduce using rule 67 (initial -> ifstatement4 .) ]


state 5

    (68) initial -> switch_statement5 .

    $end            reduce using rule 68 (initial -> switch_statement5 .)


state 6

    (1) statement1 -> for_loop1 .

    $end            reduce using rule 1 (statement1 -> for_loop1 .)
    RBRACE          reduce using rule 1 (statement1 -> for_loop1 .)
    FOR             reduce using rule 1 (statement1 -> for_loop1 .)
    IF              reduce using rule 1 (statement1 -> for_loop1 .)
    ID              reduce using rule 1 (statement1 -> for_loop1 .)


state 7

    (3) statement1 -> other_statement1 .

    $end            reduce using rule 3 (statement1 -> other_statement1 .)
    RBRACE          reduce using rule 3 (statement1 -> other_statement1 .)
    FOR             reduce using rule 3 (statement1 -> other_statement1 .)
    IF              reduce using rule 3 (statement1 -> other_statement1 .)
    ID              reduce using rule 3 (statement1 -> other_statement1 .)


state 8

    (4) statement1 -> empty .
    (22) function2 -> empty .

  ! reduce/reduce conflict for $end resolved using rule 4 (statement1 -> empty .)
    $end            reduce using rule 4 (statement1 -> empty .)

  ! $end            [ reduce using rule 22 (function2 -> empty .) ]


state 9

    (20) function2 -> type2 . ID LPAREN params2 RPAREN LBRACE statements2 RBRACE function2
    (21) function2 -> type2 . ID LPAREN RPAREN LBRACE statements2 RBRACE function2

    ID              shift and go to state 16


state 10

    (19) other_statement1 -> ID . OPERATOR expression1 SEMICOLON

    OPERATOR        shift and go to state 17


state 11

    (42) ifstatement4 -> IF . LPAREN expr4 RPAREN LBRACE statements4 RBRACE ifelse4
    (43) ifstatement4 -> IF . expr4 LBRACE statements4 RBRACE
    (50) expr4 -> . expr4 OPERATOR OPERATOR expr4
    (51) expr4 -> . expr4 OPERATOR expr4
    (52) expr4 -> . ID
    (53) expr4 -> . NUMBER

    LPAREN          shift and go to state 18
    ID              shift and go to state 20
    NUMBER          shift and go to state 21

    expr4                          shift and go to state 19

state 12

    (54) switch_statement5 -> SWITCH . use_ornot5 LBRACE case_list5 DEFAULT COLON statement_list5 RBRACE
    (55) use_ornot5 -> . LPAREN ID RPAREN
    (56) use_ornot5 -> . ID

    LPAREN          shift and go to state 23
    ID              shift and go to state 24

    use_ornot5                     shift and go to state 22

state 13

    (5) for_loop1 -> FOR . LPAREN assignment1 SEMICOLON condition1 SEMICOLON update1 RPAREN compound_statement1

    LPAREN          shift and go to state 25


state 14

    (26) type2 -> INT .

    ID              reduce using rule 26 (type2 -> INT .)


state 15

    (27) type2 -> FLOAT .

    ID              reduce using rule 27 (type2 -> FLOAT .)


state 16

    (20) function2 -> type2 ID . LPAREN params2 RPAREN LBRACE statements2 RBRACE function2
    (21) function2 -> type2 ID . LPAREN RPAREN LBRACE statements2 RBRACE function2

    LPAREN          shift and go to state 26


state 17

    (19) other_statement1 -> ID OPERATOR . expression1 SEMICOLON
    (11) expression1 -> . expression1 OPERATOR expression1
    (12) expression1 -> . expression1 OPERATOR OPERATOR expression1
    (13) expression1 -> . LPAREN expression1 RPAREN
    (14) expression1 -> . ID
    (15) expression1 -> . NUMBER

    LPAREN          shift and go to state 29
    ID              shift and go to state 27
    NUMBER          shift and go to state 30

    expression1                    shift and go to state 28

state 18

    (42) ifstatement4 -> IF LPAREN . expr4 RPAREN LBRACE statements4 RBRACE ifelse4
    (50) expr4 -> . expr4 OPERATOR OPERATOR expr4
    (51) expr4 -> . expr4 OPERATOR expr4
    (52) expr4 -> . ID
    (53) expr4 -> . NUMBER

    ID              shift and go to state 20
    NUMBER          shift and go to state 21

    expr4                          shift and go to state 31

state 19

    (43) ifstatement4 -> IF expr4 . LBRACE statements4 RBRACE
    (50) expr4 -> expr4 . OPERATOR OPERATOR expr4
    (51) expr4 -> expr4 . OPERATOR expr4

    LBRACE          shift and go to state 32
    OPERATOR        shift and go to state 33


state 20

    (52) expr4 -> ID .

    LBRACE          reduce using rule 52 (expr4 -> ID .)
    OPERATOR        reduce using rule 52 (expr4 -> ID .)
    RPAREN          reduce using rule 52 (expr4 -> ID .)
    RBRACE          reduce using rule 52 (expr4 -> ID .)
    ID              reduce using rule 52 (expr4 -> ID .)
    NUMBER          reduce using rule 52 (expr4 -> ID .)
    SEMICOLON       reduce using rule 52 (expr4 -> ID .)


state 21

    (53) expr4 -> NUMBER .

    LBRACE          reduce using rule 53 (expr4 -> NUMBER .)
    OPERATOR        reduce using rule 53 (expr4 -> NUMBER .)
    RPAREN          reduce using rule 53 (expr4 -> NUMBER .)
    RBRACE          reduce using rule 53 (expr4 -> NUMBER .)
    ID              reduce using rule 53 (expr4 -> NUMBER .)
    NUMBER          reduce using rule 53 (expr4 -> NUMBER .)
    SEMICOLON       reduce using rule 53 (expr4 -> NUMBER .)


state 22

    (54) switch_statement5 -> SWITCH use_ornot5 . LBRACE case_list5 DEFAULT COLON statement_list5 RBRACE

    LBRACE          shift and go to state 34


state 23

    (55) use_ornot5 -> LPAREN . ID RPAREN

    ID              shift and go to state 35


state 24

    (56) use_ornot5 -> ID .

    LBRACE          reduce using rule 56 (use_ornot5 -> ID .)


state 25

    (5) for_loop1 -> FOR LPAREN . assignment1 SEMICOLON condition1 SEMICOLON update1 RPAREN compound_statement1
    (6) assignment1 -> . INT ID OPERATOR expression1
    (7) assignment1 -> . ID OPERATOR expression1

    INT             shift and go to state 37
    ID              shift and go to state 38

    assignment1                    shift and go to state 36

state 26

    (20) function2 -> type2 ID LPAREN . params2 RPAREN LBRACE statements2 RBRACE function2
    (21) function2 -> type2 ID LPAREN . RPAREN LBRACE statements2 RBRACE function2
    (23) params2 -> . param2
    (24) params2 -> . params2 COMMA param2
    (25) param2 -> . type2 ID
    (26) type2 -> . INT
    (27) type2 -> . FLOAT

    RPAREN          shift and go to state 41
    INT             shift and go to state 14
    FLOAT           shift and go to state 15

    type2                          shift and go to state 39
    params2                        shift and go to state 40
    param2                         shift and go to state 42

state 27

    (14) expression1 -> ID .

    SEMICOLON       reduce using rule 14 (expression1 -> ID .)
    OPERATOR        reduce using rule 14 (expression1 -> ID .)
    RPAREN          reduce using rule 14 (expression1 -> ID .)


state 28

    (19) other_statement1 -> ID OPERATOR expression1 . SEMICOLON
    (11) expression1 -> expression1 . OPERATOR expression1
    (12) expression1 -> expression1 . OPERATOR OPERATOR expression1

    SEMICOLON       shift and go to state 44
    OPERATOR        shift and go to state 43


state 29

    (13) expression1 -> LPAREN . expression1 RPAREN
    (11) expression1 -> . expression1 OPERATOR expression1
    (12) expression1 -> . expression1 OPERATOR OPERATOR expression1
    (13) expression1 -> . LPAREN expression1 RPAREN
    (14) expression1 -> . ID
    (15) expression1 -> . NUMBER

    LPAREN          shift and go to state 29
    ID              shift and go to state 27
    NUMBER          shift and go to state 30

    expression1                    shift and go to state 45

state 30

    (15) expression1 -> NUMBER .

    SEMICOLON       reduce using rule 15 (expression1 -> NUMBER .)
    OPERATOR        reduce using rule 15 (expression1 -> NUMBER .)
    RPAREN          reduce using rule 15 (expression1 -> NUMBER .)


state 31

    (42) ifstatement4 -> IF LPAREN expr4 . RPAREN LBRACE statements4 RBRACE ifelse4
    (50) expr4 -> expr4 . OPERATOR OPERATOR expr4
    (51) expr4 -> expr4 . OPERATOR expr4

    RPAREN          shift and go to state 46
    OPERATOR        shift and go to state 33


state 32

    (43) ifstatement4 -> IF expr4 LBRACE . statements4 RBRACE
    (47) statements4 -> . statements4 statements4 SEMICOLON
    (48) statements4 -> . expr4
    (49) statements4 -> . empty
    (50) expr4 -> . expr4 OPERATOR OPERATOR expr4
    (51) expr4 -> . expr4 OPERATOR expr4
    (52) expr4 -> . ID
    (53) expr4 -> . NUMBER
    (64) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    ID              shift and go to state 20
    NUMBER          shift and go to state 21
    RBRACE          reduce using rule 64 (empty -> .)
    SEMICOLON       reduce using rule 64 (empty -> .)

  ! ID              [ reduce using rule 64 (empty -> .) ]
  ! NUMBER          [ reduce using rule 64 (empty -> .) ]

    expr4                          shift and go to state 47
    statements4                    shift and go to state 48
    empty                          shift and go to state 49

state 33

    (50) expr4 -> expr4 OPERATOR . OPERATOR expr4
    (51) expr4 -> expr4 OPERATOR . expr4
    (50) expr4 -> . expr4 OPERATOR OPERATOR expr4
    (51) expr4 -> . expr4 OPERATOR expr4
    (52) expr4 -> . ID
    (53) expr4 -> . NUMBER

    OPERATOR        shift and go to state 51
    ID              shift and go to state 20
    NUMBER          shift and go to state 21

    expr4                          shift and go to state 50

state 34

    (54) switch_statement5 -> SWITCH use_ornot5 LBRACE . case_list5 DEFAULT COLON statement_list5 RBRACE
    (57) case_list5 -> . case_entry5 case_list5
    (58) case_list5 -> . empty
    (59) case_entry5 -> . CASE NUMBER COLON statement_list5
    (64) empty -> .

    CASE            shift and go to state 55
    DEFAULT         reduce using rule 64 (empty -> .)

    case_list5                     shift and go to state 52
    case_entry5                    shift and go to state 53
    empty                          shift and go to state 54

state 35

    (55) use_ornot5 -> LPAREN ID . RPAREN

    RPAREN          shift and go to state 56


state 36

    (5) for_loop1 -> FOR LPAREN assignment1 . SEMICOLON condition1 SEMICOLON update1 RPAREN compound_statement1

    SEMICOLON       shift and go to state 57


state 37

    (6) assignment1 -> INT . ID OPERATOR expression1

    ID              shift and go to state 58


state 38

    (7) assignment1 -> ID . OPERATOR expression1

    OPERATOR        shift and go to state 59


state 39

    (25) param2 -> type2 . ID

    ID              shift and go to state 60


state 40

    (20) function2 -> type2 ID LPAREN params2 . RPAREN LBRACE statements2 RBRACE function2
    (24) params2 -> params2 . COMMA param2

    RPAREN          shift and go to state 61
    COMMA           shift and go to state 62


state 41

    (21) function2 -> type2 ID LPAREN RPAREN . LBRACE statements2 RBRACE function2

    LBRACE          shift and go to state 63


state 42

    (23) params2 -> param2 .

    RPAREN          reduce using rule 23 (params2 -> param2 .)
    COMMA           reduce using rule 23 (params2 -> param2 .)


state 43

    (11) expression1 -> expression1 OPERATOR . expression1
    (12) expression1 -> expression1 OPERATOR . OPERATOR expression1
    (11) expression1 -> . expression1 OPERATOR expression1
    (12) expression1 -> . expression1 OPERATOR OPERATOR expression1
    (13) expression1 -> . LPAREN expression1 RPAREN
    (14) expression1 -> . ID
    (15) expression1 -> . NUMBER

    OPERATOR        shift and go to state 65
    LPAREN          shift and go to state 29
    ID              shift and go to state 27
    NUMBER          shift and go to state 30

    expression1                    shift and go to state 64

state 44

    (19) other_statement1 -> ID OPERATOR expression1 SEMICOLON .

    $end            reduce using rule 19 (other_statement1 -> ID OPERATOR expression1 SEMICOLON .)
    RBRACE          reduce using rule 19 (other_statement1 -> ID OPERATOR expression1 SEMICOLON .)
    FOR             reduce using rule 19 (other_statement1 -> ID OPERATOR expression1 SEMICOLON .)
    IF              reduce using rule 19 (other_statement1 -> ID OPERATOR expression1 SEMICOLON .)
    ID              reduce using rule 19 (other_statement1 -> ID OPERATOR expression1 SEMICOLON .)


state 45

    (13) expression1 -> LPAREN expression1 . RPAREN
    (11) expression1 -> expression1 . OPERATOR expression1
    (12) expression1 -> expression1 . OPERATOR OPERATOR expression1

    RPAREN          shift and go to state 66
    OPERATOR        shift and go to state 43


state 46

    (42) ifstatement4 -> IF LPAREN expr4 RPAREN . LBRACE statements4 RBRACE ifelse4

    LBRACE          shift and go to state 67


state 47

    (48) statements4 -> expr4 .
    (50) expr4 -> expr4 . OPERATOR OPERATOR expr4
    (51) expr4 -> expr4 . OPERATOR expr4

    RBRACE          reduce using rule 48 (statements4 -> expr4 .)
    ID              reduce using rule 48 (statements4 -> expr4 .)
    NUMBER          reduce using rule 48 (statements4 -> expr4 .)
    SEMICOLON       reduce using rule 48 (statements4 -> expr4 .)
    OPERATOR        shift and go to state 33


state 48

    (43) ifstatement4 -> IF expr4 LBRACE statements4 . RBRACE
    (47) statements4 -> statements4 . statements4 SEMICOLON
    (47) statements4 -> . statements4 statements4 SEMICOLON
    (48) statements4 -> . expr4
    (49) statements4 -> . empty
    (50) expr4 -> . expr4 OPERATOR OPERATOR expr4
    (51) expr4 -> . expr4 OPERATOR expr4
    (52) expr4 -> . ID
    (53) expr4 -> . NUMBER
    (64) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    RBRACE          shift and go to state 69
    ID              shift and go to state 20
